[tool.poetry]
name = "gpt-pdf"
version = "0.1.0"
description = "Chat with Multiple PDFs is a Python web application that enables you to interact with the content of multiple PDF files via natural language chat, using OpenAI's models."
authors = ["Sayantan <this.sayantan@gmail.com>"]
readme = "README.md"
packages = [{include = "gpt_pdf"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.23.1"
python-dotenv = "^1.0.0"
pypdf2 = "^3.0.1"
langchain = "^0.0.202"
streamlit-extras = "^0.2.7"
huggingface-hub = "^0.15.1"
streamlit-chat = "^0.0.2.2"
openai = "^0.27.8"
tiktoken = "^0.4.0"
faiss-cpu = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
